completed tests for method fuegeKlausurHinzu in aggregate student